# usenixsecurity25-quic-sni

./: README.md  requirements.txt
ae-appendix/: Makefile  README.md  usenix25-ae.tex  usenix25.tex
experiments/: common.py
experiments/availability-attack/: README.md  send_udp.sh  spoof.py
experiments/availability-attack/pcap/: dns_attacker_client_anon.pcap  dns_server_anon.pcap  dns_victim_client_anon.pcap  quic_server_anon.pcap  (+2 more)
experiments/diurnal-blocking/: Makefile  plot.py
experiments/flow-tracking-time/: README  flow-tracking-time.pcap  flow_tracking_time.sh
experiments/how-fast-gfw-blocks/: Makefile  plot-boxplot.py  plot-ecdf.py
experiments/overlap-between-blocklists/: Makefile  gen_table_5.py  plot.py
experiments/rule-srcport-greater-than-dst-port/: Makefile  heatmap-client-script.sh  heatmap-ports-1-65000-step-1000-date-2024-10-18.csv  heatmap-ports-1-65000-step-1000.csv  heatmap-ports-401-450-step-1-date-2024-10-17.csv  heatmap-ports-401-450-step-1.csv  heatmap-ports-64000-65535-step-random-date-2024-10-17.csv  plot.py
experiments/sni-blocklist/: Makefile  aggregate-weekly.py  aggregated_weekly.csv  plot.py
experiments/ttl-location/: README  README.md  check-dns.py  check-quic.py  parse_quic_pcaps.py
experiments/what-triggers-blocking/: Makefile  client.py  parser.py  results.txt  runner.py  server.py
utils/: Makefile
utils/quic-packet-builder/: README.md  build.py  crypto.py  payload-gen-reference.md
utils/quic-sni-sender/: Cargo.toml
utils/quic-sni-sender/src/: main.rs
utils/server-parser/: go.mod  go.sum  server-parser.go
(+200 files in other folders)
