[package]
name = "quic-sni-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
csv = "1.2"
log = "0.4"
env_logger = "0.10"
quiche = { version = "0.23.0", features = ["boringssl-boring-crate"] }
rand = "0.8"
chrono = "0.4"
tokio = { version = "1.28", features = ["full"] }
socket2 = { version = "0.4", features = ["all"] }
ipnet = "2"
boring = { version = "4.6.0", features = ["pq-experimental"]}
url = "2.5.0"

